# gg-agent-runtime

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: app.rs  error.rs  lib.rs  provider.rs  provider_registry.rs  runtime.rs  services.rs  state.rs  team_comms.rs
crates/runtime-provider-claude/: Cargo.toml
crates/runtime-provider-claude/src/: lib.rs
crates/runtime-provider-codex/: Cargo.toml
crates/runtime-provider-codex/src/: lib.rs
crates/runtime-server/: Cargo.toml
crates/runtime-server/src/: bootstrap.rs  config.rs  http.rs  lib.rs  main.rs  openapi.rs
crates/runtime-store-sqlite/: Cargo.toml
crates/runtime-store-sqlite/src/: lib.rs
crates/runtime-tools/: Cargo.toml
crates/runtime-tools/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md  README.md
examples/: runtime-server.toml
gg/: design-doc-standalone.md
gg/agent-outputs/: phase8-hosted-runtime-acceptance-demo-2026-05-06.md  standalone-runtime-acceptance-review-2026-05-06.md  standalone-runtime-single-user-ops-phase8-2026-05-06.md
openapi/: runtime-server-openapi.yaml
scripts/: install-from-source.sh  install-runtime.sh  package-release.sh
sidecars/claude-bridge/src/claude-client/: client.ts  deterministic-turn.ts  types.ts
sidecars/claude-bridge/src/claude-client/client/: sdk-turn.ts
